# cpp-cmake-template

./: .gitignore  CMakeLists.txt  ClangToolchain.cmake  README.md  main.cpp  tcpip-demo.cpp
misc/eclipse/: .cproject  .project  cpp-template-debug-unix.launch  cpp-template-debug.launch
